--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Phần mềm Bán hàng - VTNN Thành Nhân",
   "short_name": "VTNN Thành Nhân",
   "description": "Phần mềm quản lý bán hàng cho cửa hàng VTNN Thành Nhân.",
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1e1e1e",
