--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,13 @@
 {
-  "name": "Phần mềm Bán hàng - VTNN Thành Nhân",
-  "short_name": "VTNN Thành Nhân",
-  "description": "Phần mềm quản lý bán hàng cho cửa hàng VTNN Thành Nhân.",
-  "start_url": "/",
+  "name": "Phần mềm Quản lý bán hàng - Cửa hàng VTNN Thành Nhân",
+  "short_name": "QLBH - VTNN Thành Nhân",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#1e1e1e",
+  "theme_color": "#2196f3",
   "icons": [
-    {
-      "src": "/images/favicon.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/favicon.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    }
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
